--- a/src/scss/blocks/main-header.scss
+++ b/src/scss/blocks/main-header.scss
@@ -13,12 +13,13 @@
   top: 0;
   left: 0;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   width: 100%;
-  height: 9rem;
+  height: 8rem;
   background: transparent;
   z-index: 1000;
+  padding-inline: 24rem;
 
   @media screen and (max-width: 1400px) {
     justify-content: flex-start;
@@ -89,5 +90,11 @@
         top: 0;
       }
     }
+  }
+
+  &__contacts {
+    display: flex;
+    color: #fff;
+    gap: 1.2rem;
   }
 }
