--- a/src/scss/partials/variables.scss
+++ b/src/scss/partials/variables.scss
@@ -1,8 +1,8 @@
 :root {
-  --accent: rgb(119, 15, 15);
-  --accent-dark: rgb(91, 11, 11);
-  --accent-light: rgb(173, 21, 21);
-  --contrast: rgb(15, 119, 57);
+  --accent: #23B05D;
+  /* --accent-dark: rgb(91, 11, 11); */
+  /* --accent-light: rgb(173, 21, 21); */
+  /* --contrast: rgb(15, 119, 57); */
   --font-1: 'Inter', sans-serif;
-  --text-color: #333;
+  --text-color: #fff;
 }
