feat: finished who-we-are section without adaptation

--- a/src/scss/my.scss
+++ b/src/scss/my.scss
@@ -14,3 +14,5 @@
 @use 'blocks/globals/form';
 @use 'blocks/globals/btn';
 @use "blocks/home/home-intro";
+@use "blocks/home/who-we-are";
+@use "blocks/globals/button";
