--- a/src/scss/blocks/home/home-intro.scss
+++ b/src/scss/blocks/home/home-intro.scss
@@ -1,6 +1,8 @@
 .home-intro {
   position: relative;
   height: 90rem;
+  background: rgb(0, 0, 0, 1%);
+  backdrop-filter: blur(8px);
 
   img {
     position: absolute;
@@ -14,9 +16,9 @@
   }
 
   &__inner {
+    position: relative;
     display: flex;
     justify-content: flex-end;
-    position: relative;
   }
 
   &__wrapper {
@@ -24,22 +26,22 @@
     display: flex;
     flex-direction: column;
     gap: 3.2rem;
-    padding-block: 9.6rem;
     margin-top: 53.1rem;
+    padding-block: 9.6rem;
   }
 
   &__subtitle {
+    max-width: 69.6rem;
     font-size: 2.4rem;
     font-weight: 400;
     letter-spacing: -0.096rem;
-    max-width: 69.6rem;
   }
 
   &__title {
+    max-width: 69.6rem;
     font-size: 4.8rem;
     font-weight: 500;
     letter-spacing: -0.192rem;
-    max-width: 69.6rem;
 
     @media screen and (max-width: 768px) {
       font-size: 4rem;
