feat: finished our-services grid

--- a/src/scss/my.scss
+++ b/src/scss/my.scss
@@ -17,3 +17,4 @@
 @use "blocks/home/who-we-are";
 @use "blocks/globals/button";
 @use "blocks/home/why-us";
+@use "blocks/vue/services/our-services";
