--- a/src/scss/blocks/vue/services/our-services-popup.scss
+++ b/src/scss/blocks/vue/services/our-services-popup.scss
@@ -16,18 +16,18 @@
     display: block;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.9);
+    background: rgb(0, 0, 0, 90%);
     z-index: 1;
   }
 
   &__inner {
     position: relative;
     max-width: 640px;
-    border-radius: 16px;
-    background: rgba(0, 56, 96, 0.8);
-    backdrop-filter: blur(16px);
     padding: 48px;
+    background: rgb(0, 56, 96, 80%);
+    border-radius: 16px;
     z-index: 2;
+    backdrop-filter: blur(16px);
   }
 
   &__header {
