--- a/src/scss/blocks/vue/services/our-services.scss
+++ b/src/scss/blocks/vue/services/our-services.scss
@@ -1,30 +1,31 @@
 .our-services-item {
   position: relative;
   display: flex;
-  flex-direction: column;
   justify-content: flex-end;
-  aspect-ratio: 1 / 1;
   border-radius: 16px;
   overflow: hidden;
+  aspect-ratio: 1 / 1;
+  flex-direction: column;
 
   &::before {
     content: '';
     position: absolute;
-    bottom: 0;
     left: 0;
+    bottom: 0;
     display: block;
     width: 100%;
     height: 30%;
     background: linear-gradient(
       180deg,
-      rgba(0, 0, 0, 0) 37.02%,
-      rgba(0, 0, 0, 0.8) 100%
+      rgb(0, 0, 0, 0%) 37.02%,
+      rgb(0, 0, 0, 80%) 100%
     );
     z-index: 2;
   }
 
   &.our-services-item--first {
     background-color: #f44;
+
     .our-services-item {
       &__img {
         top: initial;
@@ -44,12 +45,8 @@
     display: block;
     width: 100%;
     height: 100%;
-    object-fit: cover;
     z-index: 1;
-  }
-
-  &__subtitle {
-    margin: 0;
+    object-fit: cover;
   }
 
   &__inner {
@@ -62,6 +59,7 @@
   }
 
   &__subtitle {
+    margin: 0;
     max-width: 25rem;
     font-size: 2rem;
     font-weight: 500;
@@ -72,11 +70,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    flex: 0 0 3.8rem;
     height: 3.8rem;
+    background: var(--accent);
     border: none;
     border-radius: 32px;
-    background: var(--accent);
+    flex: 0 0 3.8rem;
 
     &--red {
       background: #f44;
