--- a/src/scss/blocks/vue/services/our-services.scss
+++ b/src/scss/blocks/vue/services/our-services.scss
@@ -24,6 +24,7 @@
   }
 
   &.our-services-item--first {
+    justify-content: initial;
     background-color: #f44;
 
     .our-services-item {
@@ -34,6 +35,30 @@
         bottom: 0;
         width: 80%;
         height: auto;
+      }
+
+      &__inner {
+        position: relative;
+        display: flex;
+        justify-content: space-between;
+        align-items: start;
+        height: 100%;
+        flex-direction: column;
+      }
+
+      &__subtitle {
+        font-size: 3.2rem;
+        font-weight: 500;
+        letter-spacing: -0.128rem;
+      }
+
+      &__btn {
+        span {
+          font-size: 1.4rem;
+          font-weight: 600;
+          line-height: 1.8rem;
+          text-transform: uppercase;
+        }
       }
     }
   }
