--- a/src/scss/blocks/home/why-us.scss
+++ b/src/scss/blocks/home/why-us.scss
@@ -17,6 +17,14 @@
     display: flex;
     gap: 4.8rem;
     padding-block: 9.6rem;
+
+    @media screen and (max-width: 992px) {
+      flex-direction: column;
+    }
+
+    @media screen and (max-width: 768px) {
+      padding-block: 6.4rem;
+    }
   }
 
   &__left {
