--- a/src/scss/blocks/globals/btn.scss
+++ b/src/scss/blocks/globals/btn.scss
@@ -1,3 +1,15 @@
 .btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1.2rem 2.4rem;
+  font-size: 1.4rem;
+  font-weight: 600;
   color: #fff;
+  background: var(--accent);
+  border: none;
+  border-radius: 3.2rem;
+  gap: 1rem;
+  line-height: 1.8rem;
+  text-transform: uppercase;
 }
