--- a/src/scss/blocks/globals/form.scss
+++ b/src/scss/blocks/globals/form.scss
@@ -9,37 +9,43 @@
     input[type='tel'],
     textarea {
       width: 100%;
-      height: 5.6rem;
-      padding: 0 1.6rem;
+      height: 4.2rem;
+      padding: 1.2rem 1.8rem;
       font-size: 1.6rem;
       font-weight: 400;
       color: white;
       background: transparent;
-      border: none;
+      border: 1px solid rgb(255, 255, 255, 20%);
+      border-radius: 8px;
       transition: all 300ms ease-out;
-      border-bottom: 1px solid rgb(255, 255, 255, 30%);
+      backdrop-filter: blur(4px);
       line-height: 2.4rem;
       margin-bottom: 2.4rem;
       outline: none;
 
       &::placeholder {
-        color: #717c80;
+        color: rgb(255, 255, 255, 50%);
+        transition: all 300ms ease-out;
       }
 
       &:focus {
-        border-bottom: 1px solid white;
+        border: 1px solid rgb(255, 255, 255, 50%);
+
+        &::placeholder {
+          color: white;
+        }
       }
     }
 
     textarea {
-      height: 6.5rem;
-      padding: 2.4rem 1.6rem;
+      height: 8.4rem;
+      padding: 1.2rem 1.8rem;
       overflow: hidden;
       resize: vertical;
     }
 
     &.form__group--textarea {
-      margin-bottom: 3rem;
+      margin-bottom: 4.8rem;
 
       .wpcf7-not-valid-tip {
         bottom: 0;
@@ -51,6 +57,7 @@
     position: relative;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 
     @media screen and (max-width: 576px) {
       display: block;
@@ -69,11 +76,11 @@
 
   &__privacy {
     position: relative;
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     font-weight: 400;
-    color: black;
+    color: white;
     flex: 1;
-    line-height: 2.4rem;
+    line-height: 1.8rem;
 
     .wpcf7-list-item {
       margin: 0;
@@ -83,35 +90,40 @@
       position: relative;
       display: block;
       cursor: pointer;
-      padding-left: 3.2rem;
-      padding-right: 3rem;
+      padding-left: 4.8rem;
+      padding-right: 21.7rem;
 
       @media screen and (max-width: 992px) {
         text-align: left;
       }
 
       &::before {
+        content: '';
         position: absolute;
-        top: 9px;
+        top: 50%;
         left: 0;
-        width: 16px;
-        height: 16px;
-        border: 1px solid var(--accent);
-        border-radius: 2px;
+        width: 3.2rem;
+        height: 3.2rem;
+        border: 1px solid white;
+        border-radius: 50%;
+        translate: 0 -50%;
       }
 
       &::after {
+        content: '';
         position: absolute;
-        top: 13px;
-        left: 4px;
-        width: 8px;
-        height: 8px;
-        background: var(--accent);
+        top: 50%;
+        left: 0.8rem;
+        width: 1.6rem;
+        height: 1.6rem;
+        background: white;
+        border-radius: 50%;
         opacity: 0;
+        translate: 0 -50%;
       }
 
       a {
-        color: var(--accent);
+        color: white;
         transition: all 300ms ease-out;
         text-decoration: underline;
 
@@ -125,9 +137,10 @@
   .wpcf7-not-valid-tip {
     position: absolute;
     left: 1rem;
-    bottom: -4rem;
+    bottom: -3rem;
     display: block;
     font-size: 1.4rem;
+    color: #003860;
   }
 
   input[type='submit'] {
@@ -135,9 +148,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 1.6rem 0;
-    font-size: 1.2rem;
+    padding: 1.2rem 2.4rem;
+    font-size: 1.4rem;
     font-weight: 600;
+    line-height: 1.8rem;
     background: var(--accent);
     border: none;
     box-shadow: 0 0.4rem 1rem 0 rgb(0, 0, 0, 15%);
@@ -147,7 +161,7 @@
     text-transform: uppercase;
 
     &:hover {
-      background: var(--accent-dark);
+      background: #003860;
     }
   }
 
