--- a/src/scss/my.scss
+++ b/src/scss/my.scss
@@ -15,7 +15,8 @@
 @use 'blocks/globals/btn';
 @use 'blocks/home/home-intro';
 @use 'blocks/home/who-we-are';
-@use 'blocks/globals/button';
 @use 'blocks/home/why-us';
 @use 'blocks/vue/services/our-services';
 @use 'blocks/vue/services/our-services-popup';
+@use 'blocks/footer/footer-top';
+@use 'blocks/footer/footer-bottom';
