feat: finished footer-bottom without adaptation

--- a/src/scss/my.scss
+++ b/src/scss/my.scss
@@ -20,3 +20,6 @@
 @use 'blocks/vue/services/our-services-popup';
 @use 'blocks/footer/footer-top';
 @use 'blocks/footer/footer-bottom';
+@use 'blocks/footer/footer-bottom-left';
+@use 'blocks/footer/footer-bottom-right';
+@use 'blocks/footer/footer-copyright-menu';
