--- a/src/scss/blocks/footer/footer-bottom.scss
+++ b/src/scss/blocks/footer/footer-bottom.scss
@@ -1,3 +1,38 @@
 .footer-bottom {
-  display: none;
+  color: #000;
+
+  &__wrapper {
+    display: flex;
+    align-items: center;
+    gap: 3.2rem;
+    padding-block: 6.4rem 3.2rem;
+  }
+
+  &__row {
+    display: flex;
+    justify-content: space-between;
+    align-items: start;
+    color: #141414;
+    opacity: 0.7;
+  }
+
+  &__copyright {
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 140%;
+    margin-bottom: 0.8rem;
+  }
+
+  &__partner {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    font-size: 1.2rem;
+    font-weight: 300;
+
+    a {
+      display: flex;
+      align-items: center;
+    }
+  }
 }
