--- a/src/scss/blocks/footer/footer-bottom.scss
+++ b/src/scss/blocks/footer/footer-bottom.scss
@@ -4,8 +4,11 @@
   &__wrapper {
     display: flex;
     align-items: center;
-    gap: 3.2rem;
     padding-block: 6.4rem 3.2rem;
+
+    @media screen and (max-width: 1200px) {
+      flex-direction: column;
+    }
   }
 
   &__row {
@@ -14,6 +17,14 @@
     align-items: start;
     color: #141414;
     opacity: 0.7;
+
+    @media screen and (max-width: 992px) {
+      flex-direction: column-reverse;
+      gap: 3.2rem;
+      justify-content: center;
+      align-items: center;
+      padding-bottom: 3.2rem;
+    }
   }
 
   &__copyright {
@@ -21,6 +32,7 @@
     font-weight: 400;
     line-height: 140%;
     margin-bottom: 0.8rem;
+    
   }
 
   &__partner {
@@ -29,6 +41,10 @@
     gap: 5px;
     font-size: 1.2rem;
     font-weight: 300;
+
+    @media screen and (max-width: 576px) {
+      justify-content: center;
+    }
 
     a {
       display: flex;
