upd: small fixws

--- a/src/scss/blocks/footer/footer-bottom-right.scss
+++ b/src/scss/blocks/footer/footer-bottom-right.scss
@@ -15,7 +15,8 @@
 
     @media screen and (max-width: 1200px) {
       justify-content: center;
-      gap: 6.4rem;
+      align-items: end;
+      gap: 3.2rem;
     }
 
     .footer-bottom-right__label {
