--- a/src/scss/blocks/home/why-us.scss
+++ b/src/scss/blocks/home/why-us.scss
@@ -20,6 +20,7 @@
 
     @media screen and (max-width: 992px) {
       flex-direction: column;
+      align-items: center;
     }
 
     @media screen and (max-width: 768px) {
