feat: small fixes

--- a/src/scss/blocks/header/main-menu.scss
+++ b/src/scss/blocks/header/main-menu.scss
@@ -26,6 +26,15 @@
     opacity: 1;
     transform: scale(1);
     pointer-events: initial;
+
+    .menu-item a {
+      font-size: 1.4rem;
+      font-weight: 600;
+      letter-spacing: 0.024rem;
+      margin-bottom: 1rem;
+      text-transform: uppercase;
+      color: #003860;
+    }
   }
 
   li {
