--- a/src/scss/blocks/footer/footer-bottom.scss
+++ b/src/scss/blocks/footer/footer-bottom.scss
@@ -32,7 +32,10 @@
     font-weight: 400;
     line-height: 140%;
     margin-bottom: 0.8rem;
-    
+
+    @media screen and (max-width: 576px) {
+      text-align: center;
+    }
   }
 
   &__partner {
@@ -42,7 +45,7 @@
     font-size: 1.2rem;
     font-weight: 300;
 
-    @media screen and (max-width: 576px) {
+    @media screen and (max-width: 992px) {
       justify-content: center;
     }
 
