--- a/src/scss/blocks/header/sandwitch.scss
+++ b/src/scss/blocks/header/sandwitch.scss
@@ -39,7 +39,7 @@
     width: 100%;
     height: 2px;
     transition: all linear 0.1s;
-    background-color: black;
+    background-color: white;
   }
 
   &__line--top {
