--- a/src/scss/blocks/main-header.scss
+++ b/src/scss/blocks/main-header.scss
@@ -21,10 +21,6 @@
   z-index: 1000;
   padding-inline: 24rem;
 
-  @media screen and (max-width: 1400px) {
-    justify-content: flex-start;
-  }
-
   @media screen and (max-width: 1200px) {
     padding: 0 6rem;
   }
@@ -44,13 +40,15 @@
 
   &.active {
     position: fixed;
+    display: flex;
+    justify-content: space-between;
     top: 0;
     left: 0;
     width: 100%;
-    height: 6rem;
+    height: 8rem;
     box-shadow: 0 2px 4px rgb(0, 0, 0, 30%);
     transition: all 0.4s;
-    z-index: 1000;
+    z-index: 10000;
     background-color: white;
 
     .main-menu a {
@@ -72,6 +70,10 @@
 
     .sandwitch-wrap {
       top: 0;
+    }
+
+    .sandwitch__line {
+      background-color: #003860;
     }
 
     .main-header__cart-icon {
@@ -130,6 +132,10 @@
     display: flex;
     color: #fff;
     gap: 1.2rem;
+
+    @media screen and (max-width: 992px) {
+      display: none;
+    }
   }
 
   .logo__scroll {
