--- a/src/scss/my.scss
+++ b/src/scss/my.scss
@@ -23,3 +23,4 @@
 @use 'blocks/footer/footer-bottom-left';
 @use 'blocks/footer/footer-bottom-right';
 @use 'blocks/footer/footer-copyright-menu';
+@use "blocks/home/home-gallery";
