feat: finished page intor gallery page

--- a/src/scss/my.scss
+++ b/src/scss/my.scss
@@ -24,3 +24,4 @@
 @use 'blocks/footer/footer-bottom-right';
 @use 'blocks/footer/footer-copyright-menu';
 @use "blocks/home/home-gallery";
+@use "blocks/globals/page-intro";
