--- a/src/scss/blocks/globals/form.scss
+++ b/src/scss/blocks/globals/form.scss
@@ -83,7 +83,7 @@
     line-height: 1.8rem;
 
     .wpcf7-list-item {
-      margin: 0 0 3.2rem 0;
+      margin: 0 0 3.2rem;
     }
 
     .wpcf7-list-item-label {
