--- a/src/scss/blocks/footer/footer-bottom-right.scss
+++ b/src/scss/blocks/footer/footer-bottom-right.scss
@@ -27,17 +27,17 @@
   &__mobile {
     font-size: 4.8rem;
     font-weight: 500;
-    letter-spacing: -0.192rem;
     color: #003860;
+    letter-spacing: -0.192rem;
   }
 
   &__label {
     font-size: 1.4rem;
     font-weight: 400;
-    line-height: 140%;
-    margin-bottom: 0.8rem;
     color: #141414;
     opacity: 0.7;
+    line-height: 140%;
+    margin-bottom: 0.8rem;
   }
 
   &__body {
@@ -67,21 +67,21 @@
   &__content {
     display: flex;
     align-items: center;
-    gap: 0.8rem;
     font-size: 2rem;
     font-weight: 400;
-    line-height: 140%;
     color: #141414;
+    gap: 0.8rem;
+    line-height: 140%;
   }
 
   &__right {
     display: flex;
-    flex-direction: column;
     justify-content: space-between;
-    padding: 3.2rem;
-    border-radius: 1.6rem;
-    background: rgba(0, 0, 0, 0.05);
     height: 32.4rem;
+    padding: 3.2rem;
+    background: rgb(0, 0, 0, 5%);
+    border-radius: 1.6rem;
+    flex-direction: column;
   }
 
   &__hours {
@@ -92,8 +92,8 @@
     .footer-bottom-right__content:last-child {
       font-size: 1.6rem;
       font-weight: 400;
-      line-height: 140%;
       color: #f44;
+      line-height: 140%;
     }
   }
 }
