--- a/src/scss/blocks/home/home-gallery.scss
+++ b/src/scss/blocks/home/home-gallery.scss
@@ -1,9 +1,11 @@
 .home-gallery {
   padding-block: 6.4rem 2.2rem;
+
   &__wrapper {
     display: flex;
-    flex-wrap: wrap;
     margin: 0 -0.5rem;
+    flex-wrap: wrap;
+    padding-bottom: 2.2rem;
 
     @media screen and (max-width: 576px) {
       display: block;
@@ -14,14 +16,14 @@
   &__item {
     position: relative;
     margin: 0 0.5rem 1rem;
-    flex: 0 0 calc(25% - 1rem);
-    aspect-ratio: 1/1.03;
     border-radius: var(--img-bdr);
     overflow: hidden;
+    aspect-ratio: 1/1.03;
+    flex: 0 0 calc(25% - 1rem);
 
     @media screen and (max-width: 576px) {
-      aspect-ratio: 1.5/1 !important;
       margin: 0 0 1rem;
+      aspect-ratio: 1.5/1 !important;
     }
 
     &:hover {
@@ -31,8 +33,8 @@
     }
 
     &.cl-50 {
-      flex: 0 0 calc(50% - 1rem);
       aspect-ratio: 2/1;
+      flex: 0 0 calc(50% - 1rem);
     }
 
     img {
@@ -42,10 +44,11 @@
       display: block;
       width: 100%;
       height: 100%;
-      object-fit: cover;
       transition: all 0.4s;
+      object-fit: cover;
     }
   }
+
   &__footer {
     display: flex;
     justify-content: center;
