--- a/src/scss/blocks/main-header.scss
+++ b/src/scss/blocks/main-header.scss
@@ -20,6 +20,7 @@
   background: transparent;
   z-index: 1000;
   padding-inline: 24rem;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.15);
 
   @media screen and (max-width: 1200px) {
     padding: 0 6rem;
@@ -45,10 +46,10 @@
   &.main-header--dark,
   &.active {
     position: fixed;
-    display: flex;
-    justify-content: space-between;
     top: 0;
     left: 0;
+    display: flex;
+    justify-content: space-between;
     width: 100%;
     height: 8rem;
     box-shadow: 0 2px 4px rgb(0, 0, 0, 30%);
